[gd_scene load_steps=66 format=3 uid="uid://cwa6tnvsdvxfq"]

[ext_resource type="Script" path="res://Fire_Area.gd" id="1_oo1tn"]
[ext_resource type="Texture2D" uid="uid://cj2qr5ka5c1dl" path="res://sprites/fire_2.png" id="2_ooh25"]
[ext_resource type="AudioStream" uid="uid://cu87vhvf7k4cr" path="res://sounds/effects/fire_burning_1.mp3" id="3_qbtii"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3rjva"]
atlas = ExtResource("2_ooh25")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8de5"]
atlas = ExtResource("2_ooh25")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3iha"]
atlas = ExtResource("2_ooh25")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvihx"]
atlas = ExtResource("2_ooh25")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ip864"]
atlas = ExtResource("2_ooh25")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfan6"]
atlas = ExtResource("2_ooh25")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwg4q"]
atlas = ExtResource("2_ooh25")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gd45e"]
atlas = ExtResource("2_ooh25")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfs4c"]
atlas = ExtResource("2_ooh25")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2x21"]
atlas = ExtResource("2_ooh25")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydqfx"]
atlas = ExtResource("2_ooh25")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rqyd"]
atlas = ExtResource("2_ooh25")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pwqf"]
atlas = ExtResource("2_ooh25")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eovjd"]
atlas = ExtResource("2_ooh25")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bekyj"]
atlas = ExtResource("2_ooh25")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tf4ul"]
atlas = ExtResource("2_ooh25")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw04m"]
atlas = ExtResource("2_ooh25")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v5s2"]
atlas = ExtResource("2_ooh25")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dfkp"]
atlas = ExtResource("2_ooh25")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wql1p"]
atlas = ExtResource("2_ooh25")
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fn258"]
atlas = ExtResource("2_ooh25")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3hfh"]
atlas = ExtResource("2_ooh25")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_453cb"]
atlas = ExtResource("2_ooh25")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8c48e"]
atlas = ExtResource("2_ooh25")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkrjk"]
atlas = ExtResource("2_ooh25")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lj1n8"]
atlas = ExtResource("2_ooh25")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ioks"]
atlas = ExtResource("2_ooh25")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqg0h"]
atlas = ExtResource("2_ooh25")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qti8"]
atlas = ExtResource("2_ooh25")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5h7ur"]
atlas = ExtResource("2_ooh25")
region = Rect2(576, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8b7g"]
atlas = ExtResource("2_ooh25")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kovkj"]
atlas = ExtResource("2_ooh25")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tr0h"]
atlas = ExtResource("2_ooh25")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_swvmx"]
atlas = ExtResource("2_ooh25")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_amkd6"]
atlas = ExtResource("2_ooh25")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhrgn"]
atlas = ExtResource("2_ooh25")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv3y3"]
atlas = ExtResource("2_ooh25")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fp7n"]
atlas = ExtResource("2_ooh25")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugei5"]
atlas = ExtResource("2_ooh25")
region = Rect2(512, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lego4"]
atlas = ExtResource("2_ooh25")
region = Rect2(576, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_coaie"]
atlas = ExtResource("2_ooh25")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mp2cf"]
atlas = ExtResource("2_ooh25")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyqrd"]
atlas = ExtResource("2_ooh25")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxmf4"]
atlas = ExtResource("2_ooh25")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hoky"]
atlas = ExtResource("2_ooh25")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5qu8"]
atlas = ExtResource("2_ooh25")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7bja"]
atlas = ExtResource("2_ooh25")
region = Rect2(384, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sui77"]
atlas = ExtResource("2_ooh25")
region = Rect2(448, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_58ghy"]
atlas = ExtResource("2_ooh25")
region = Rect2(512, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vu7o"]
atlas = ExtResource("2_ooh25")
region = Rect2(576, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pqvr"]
atlas = ExtResource("2_ooh25")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cygxa"]
atlas = ExtResource("2_ooh25")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8gi4"]
atlas = ExtResource("2_ooh25")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6oond"]
atlas = ExtResource("2_ooh25")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mere"]
atlas = ExtResource("2_ooh25")
region = Rect2(256, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cusoe"]
atlas = ExtResource("2_ooh25")
region = Rect2(320, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4xp5"]
atlas = ExtResource("2_ooh25")
region = Rect2(384, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ssfl"]
atlas = ExtResource("2_ooh25")
region = Rect2(448, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxxgd"]
atlas = ExtResource("2_ooh25")
region = Rect2(512, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8owx"]
atlas = ExtResource("2_ooh25")
region = Rect2(576, 320, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_2boqp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rjva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8de5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3iha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvihx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ip864")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfan6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwg4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gd45e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfs4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2x21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydqfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rqyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pwqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eovjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bekyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tf4ul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw04m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v5s2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dfkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wql1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fn258")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3hfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_453cb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8c48e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkrjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lj1n8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ioks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqg0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qti8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5h7ur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8b7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kovkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tr0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swvmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_amkd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhrgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv3y3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fp7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugei5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lego4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_coaie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mp2cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyqrd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxmf4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hoky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5qu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7bja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sui77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58ghy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vu7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pqvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cygxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8gi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6oond")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mere")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cusoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4xp5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ssfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxxgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8owx")
}],
"loop": true,
"name": &"Fire",
"speed": 40.0
}]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_73x7i"]
height = 0.3
radius = 0.07

[node name="Fire_Area" type="Area3D" groups=["fire"]]
collision_layer = 256
collision_mask = 5
script = ExtResource("1_oo1tn")

[node name="Animated_Fire" type="AnimatedSprite3D" parent="."]
layers = 256
billboard = 2
sprite_frames = SubResource("SpriteFrames_2boqp")
animation = &"Fire"
autoplay = "Fire"
frame_progress = 0.715948

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.057812, 0)
shape = SubResource("CylinderShape3D_73x7i")

[node name="Fire_Burn_Sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_qbtii")

[node name="OmniLight3D" type="OmniLight3D" parent="."]

[node name="Fire_Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Fire_Timer" to="." method="_on_fire_timer_timeout"]
